--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,126 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url('https://fonts.googleapis.com/css2?family=B612+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+/*.App-logo {*/
+/*  height: 40vmin;*/
+/*  pointer-events: none;*/
+/*}*/
+
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
+
+/*@keyframes App-logo-spin {*/
+/*  from {*/
+/*    transform: rotate(0deg);*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
+
+:root {
+    /*colors*/
+    --light-yellow-100: hsl(51, 40%, 98%);
+    --light-yellow-80: hsla(45, 40%, 98%, 0.8);
+    --light-yellow-20: hsla(45, 40%, 98%, 0.2);
+    --light-red-10: hsla(338, 40%, 25%, 0.1);
+    --dark-grey: hsl(0, 0%, 14%);
+    --dark-blue: hsl(216, 40%, 39%);
+    --dark-red-L25: hsl(338, 40%, 25%);
+    --accent-yellow-L70: hsl(42, 69%, 70%);
+    --accent-yellow-L85: hsl(42, 69%, 85%);
+    --accent-blue-L85: hsl(213, 40%, 85%);
+    --accent-red-L35: hsl(338, 40%, 35%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+body {
+    margin: 0;
+    background-image: url("./assets/white-wave.png"), linear-gradient(var(--light-yellow-80), var(--light-yellow-80));
+    background-size: cover;
+    background-blend-mode: overlay;
+    font-family: "B612 Mono", monospace;
+    color: var(--dark-grey);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/****** PLAY *******/
+
+.page-container {
+    margin: 0 5vw 0 5vw;
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 140px 40px 490px 30px auto;
+    grid-template-areas:
+            "H H H H H H"
+            "N N N N N N"
+            ". C C C C ."
+            ". B B B B ."
+            ". . . . . .";
 }
+
+.header {
+    grid-area: H;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    /*dashed line:*/
+    background-image: linear-gradient(to right, var(--dark-blue) 50%, var(--light-yellow-20) 0%);
+    background-position: bottom;
+    background-size: 20px 2px;
+    background-repeat: repeat-x;
+}
+
+.header__player {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__avatar {
+    width: 80px;
+}
+
+.header__progress-bar {
+    width: 80%;
+    background-color: var(--dark-blue);
+    border-radius: 15px;
+}
+
+.header__progress {
+    width: 65%;
+    height: 20px;
+    background-color: var(--accent-yellow-L70);
+    border-radius: 15px;
+}
+
+.header__app-logo {
+    width: 320px;
+}
+
+.play-card {
+    grid-area: C;
+    background-color: var(--light-yellow-20);
+    box-shadow: 0 4px 15px 4px hsla(0,0%,0%,0.25);
+}
+
+.title-bar {
+    height: 140px;
+    margin-top: 40px;
+    font-family: "Ubuntu", sans-serif;
+    color: var(--dark-red-L25);
+}
+
+.title-ba__title {
+    height: 70px;
+    background-color: var(--light-yellow-80);
+    padding: 0;
+    margin: 0;
+}
+
+
