--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     background-image: url("./assets/white-wave.png"), linear-gradient(var(--light-yellow-80), var(--light-yellow-80));
     background-size: cover;
     background-blend-mode: overlay;
@@ -51,22 +52,15 @@ body {
 
 .page-container {
     margin: 0 5vw 0 5vw;
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 140px 40px 490px 30px auto;
-    grid-template-areas:
-            "H H H H H H"
-            "N N N N N N"
-            ". C C C C ."
-            ". B B B B ."
-            ". . . . . .";
 }
 
+/***** HEADER *****/
+
 .header {
-    grid-area: H;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 90px;
 
     /*dashed line:*/
     background-image: linear-gradient(to right, var(--dark-blue) 50%, var(--light-yellow-20) 0%);
@@ -75,19 +69,24 @@ body {
     background-repeat: repeat-x;
 }
 
+.header__app-logo {
+    width: 320px;
+}
+
 .header__player {
-    width: 50%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    flex-basis: 50%;
+    gap: 40px;
 }
 
 .header__avatar {
-    width: 80px;
+    width: 60px;
 }
 
 .header__progress-bar {
-    width: 80%;
+    flex-basis: 420px;
     background-color: var(--dark-blue);
     border-radius: 15px;
 }
@@ -99,28 +98,122 @@ body {
     border-radius: 15px;
 }
 
-.header__app-logo {
-    width: 320px;
+/***** NAVBAR *****/
+
+.navbar {
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.navbar__link {
+    text-decoration: none;
+    color: var(--dark-blue);
+}
+
+.navbar__link:active {
+    color: var(--dark-red-L25);
+}
+
+/***** CARD *****/
+
+.play-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .play-card {
-    grid-area: C;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 480px;
+    width: 900px;
     background-color: var(--light-yellow-20);
+    background-image: url("./assets/wind.png");
+    background-repeat: no-repeat;
     box-shadow: 0 4px 15px 4px hsla(0,0%,0%,0.25);
 }
 
 .title-bar {
-    height: 140px;
+    display: flex;
+    align-items: center;
+    padding-left: 10rem;
+    height: 70px;
     margin-top: 40px;
     font-family: "Ubuntu", sans-serif;
+    background-color: var(--light-yellow-80);
     color: var(--dark-red-L25);
+    gap: 20px;
 }
 
-.title-ba__title {
-    height: 70px;
-    background-color: var(--light-yellow-80);
-    padding: 0;
-    margin: 0;
+.title-bar__title-icon {
+    height: 60px;
+    filter: saturate(40%);
 }
+
+.title-bar__title {
+    padding: 0;
+}
+
+.card-content {
+    margin-top: 40px;
+    padding-left: 10rem;
+}
+
+.card-content ul {
+    padding: 0 0 0 5rem;
+    list-style: none;
+}
+
+.card-content li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+.card-content a {
+    text-decoration: none;
+    color: var(--dark-grey);
+    font-weight: lighter;
+}
+
+.card-content__link-img {
+    filter: saturate(40%);
+    width: 2rem;
+    height: 2rem;
+}
+
+.card-image {
+    filter: saturate(40%) opacity(30%);
+    height: 240px;
+    margin: auto 0 5px auto;
+}
+
+
+/***** BUTTONS *****/
+
+.button-box {
+    display: flex;
+    width: 900px;
+    justify-content: space-between;
+}
+
+button {
+    font-family: "B612 Mono", monospace;
+    font-weight: bold;
+    background-color: var(--accent-yellow-L85);
+    color: var(--dark-blue);
+    width: 105px;
+    height: 30px;
+    border-style: none;
+    border-radius: 10px;
+    margin-top: 10px;
+    filter: drop-shadow(0px 4px 4px hsla(0, 0%, 0%, 0.25));
+}
+
 
 
