--- a/src/App.css
+++ b/src/App.css
@@ -38,83 +38,13 @@
 
 
 body {
-    margin: 0;
+    margin: 0 5vw 0 5vw;
     padding: 0;
     background-image: url("./assets/white-wave.png"), linear-gradient(var(--light-yellow-80), var(--light-yellow-80));
     background-size: cover;
     background-blend-mode: overlay;
     font-family: "B612 Mono", monospace;
     color: var(--dark-grey);
-}
-
-
-/****** PLAY *******/
-
-.page-container {
-    margin: 0 5vw 0 5vw;
-}
-
-/***** HEADER *****/
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
-
-    /*dashed line:*/
-    background-image: linear-gradient(to right, var(--dark-blue) 50%, var(--light-yellow-20) 0%);
-    background-position: bottom;
-    background-size: 20px 2px;
-    background-repeat: repeat-x;
-}
-
-.header__app-logo {
-    width: 320px;
-}
-
-.header__player {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-basis: 50%;
-    gap: 40px;
-}
-
-.header__avatar {
-    width: 60px;
-}
-
-.header__progress-bar {
-    flex-basis: 420px;
-    background-color: var(--dark-blue);
-    border-radius: 15px;
-}
-
-.header__progress {
-    width: 65%;
-    height: 20px;
-    background-color: var(--accent-yellow-L70);
-    border-radius: 15px;
-}
-
-/***** NAVBAR *****/
-
-.navbar {
-    display: flex;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-.navbar__link {
-    text-decoration: none;
-    color: var(--dark-blue);
-}
-
-.navbar__link:active {
-    color: var(--dark-red-L25);
 }
 
 /***** CARD *****/
@@ -125,78 +55,13 @@ body {
     align-items: center;
 }
 
-.play-card {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 480px;
-    width: 900px;
-    background-color: var(--light-yellow-20);
-    background-image: url("./assets/wind.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    box-shadow: 0 4px 15px 4px hsla(0,0%,0%,0.25);
-}
+/*##### CSS VOOR (CARD-CONTENT) STAAT NU DEELS IN PLAYCARD.CSS OM HET TE LATEN WERKEN, TERWIJL
+ELEMENTEN IN PLAY.JS STAAN, KAN DIT BETER/NETTER? #####*/
 
-/*#### TWEEDE BG-IMG LUKT NIET MET FLEX ####*/
-/*url("./assets/mountain.png")*/
-
-.title-bar {
-    display: flex;
-    align-items: center;
-    padding-left: 10rem;
-    height: 70px;
-    margin-top: 40px;
-    font-family: "Ubuntu", sans-serif;
-    background-color: var(--light-yellow-80);
-    color: var(--dark-red-L25);
-    gap: 20px;
-}
-
-.title-bar__title-icon {
-    height: 60px;
-    filter: saturate(40%);
-}
-
-.title-bar__title {
-    padding: 0;
-}
-
-.card-content {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 40px;
-    padding-left: 10rem;
-}
-
-.card-content ul {
-    padding: 0 0 0 5rem;
-    list-style: none;
-}
-
-.card-content li {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1rem;
-}
-
-.card-content a {
-    text-decoration: none;
-    color: var(--dark-grey);
-    font-weight: lighter;
-}
-
-.card-content__link-img {
+.card-section__link-img {
     filter: saturate(40%);
     width: 2rem;
     height: 2rem;
-}
-
-.card-image {
-    filter: saturate(40%) opacity(30%);
-    height: 240px;
-    align-self: flex-end;
-    margin-bottom: -15px;
 }
 
 /***** BUTTONS *****/
@@ -218,6 +83,17 @@ button {
     border-radius: 10px;
     margin-top: 10px;
     filter: drop-shadow(0px 4px 4px hsla(0, 0%, 0%, 0.25));
+    transition-duration: 0.1s;
+}
+
+button:hover {
+    background-color: var(--accent-yellow-L70);
+    cursor: pointer;
+}
+
+button:active {
+    transform: translateY(1px);
+    background-color: hsl(42, 69%, 75%);
 }
 
 
