--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     height: 90px;
 
     /*dashed line:*/
@@ -29,4 +30,5 @@
 .header__avatar {
     width: 60px;
     flex: 0 0 auto;
+    filter: drop-shadow(0px 4px 10px hsla(0, 0%, 0%, 0.25));
 }
