--- a/src/components/ProgressBar/ProgressBar.module.css
+++ b/src/components/ProgressBar/ProgressBar.module.css
@@ -1,11 +1,10 @@
 .progress-bar {
     flex: 0.5 0 320px;
-    background-color: var(--dark-blue);
     border-radius: 15px;
+    box-shadow: 0 4px 10px 1px hsla(0, 0%, 0%, 0.25);
 }
 
 .progress {
-    /*width: 65%;*/
     height: 20px;
     line-height: 20px;
     background-color: var(--accent-yellow-L70);
@@ -15,6 +14,7 @@
 .percentage {
     font-size: 0.8rem;
     font-weight: bold;
+    text-align: end;
     color: var(--light-yellow-100);
-    margin-left: 10px;
+    margin: 0 5px 0 5px;
 }
