--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
     --accent-red-L35: hsl(338, 40%, 35%);
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0 5vw 0 5vw;
     padding: 0;
@@ -62,7 +66,7 @@ body {
 .dashboard-container {
     display: flex;
     justify-content: center;
-    padding-bottom: 80px;
+    margin-bottom: 80px;
 }
 
 .dashboard {
@@ -74,13 +78,13 @@ body {
 }
 
 .dashboard__upper {
-    width: 120%;
+    width: 100%;
     background-color: var(--light-yellow-S70-10);
     padding: 20px;
 }
 
 .dashboard__middle {
-    width: 120%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 40px;
@@ -121,7 +125,7 @@ body {
 }
 
 .dashboard__lower {
-    width: 120%;
+    width: 100%;
     background-color: var(--light-red-10);
     padding: 20px;
 }
@@ -176,7 +180,7 @@ body {
     font-size: 0.7rem;
 }
 
-/*##### CSS voor dynamic card content in CardSection, MOET DIT HIER? #####################*/
+/*##### CSS voor dynamic card content in SmallCardSection, MOET DIT HIER? #####################*/
 .card-section__link-img {
     filter: saturate(40%) drop-shadow(0px 2px 4px hsla(0, 0%, 0%, 0.25));
     width: 2rem;
