--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     display: flex;
     justify-content: flex-start;
     height: 480px;
@@ -18,10 +19,11 @@
 }
 
 .card__image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
     filter: saturate(40%) opacity(30%);
     height: 240px;
-    align-self: flex-end;
-    margin-bottom: -50px;
 }
 
 .card__section {
@@ -30,6 +32,5 @@
     align-items: flex-start;
     margin-top: 40px;
     padding-bottom: 40px;
-    padding-left: 10rem;
 }
 
