--- a/src/components/SmallCardSection/SmallCardSection.module.css
+++ b/src/components/SmallCardSection/SmallCardSection.module.css
@@ -1,5 +1,9 @@
 /***** SMALL-CARD-SECTION *****/
 
+.card-section {
+    display: flex;
+}
+
 .card-section ul {
     margin: 40px 0 0 15rem;
     list-style: none;
@@ -12,14 +16,21 @@
     gap: 1rem;
 }
 
-.card-section a {
-    text-decoration: none;
-    color: var(--dark-grey);
-    font-weight: lighter;
+.card-section h2:hover {
+    font-weight: bold;
+    cursor: pointer;
 }
 
-.card-section a:focus {
-    font-weight: bolder;
+.card-section select {
+    background-color: var(--light-red-10);
+    font-family: 'B612 Mono', monospace;
+    padding: 0;
+    margin: 80px 0 0 4vw;
+    border: none;
+    height: 3rem;
+    width: 40%;
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 
