--- a/src/components/SmallCardSection/SmallCardSection.module.css
+++ b/src/components/SmallCardSection/SmallCardSection.module.css
@@ -2,6 +2,7 @@
 
 .card-section {
     display: flex;
+    margin-right: 40px;
 }
 
 .card-section ul {
@@ -19,18 +20,6 @@
 .card-section h2:hover {
     font-weight: bold;
     cursor: pointer;
-}
-
-.card-section select {
-    background-color: var(--light-red-10);
-    font-family: 'B612 Mono', monospace;
-    padding: 0;
-    margin: 80px 0 0 4vw;
-    border: none;
-    height: 3rem;
-    width: 40%;
-    text-align: center;
-    font-size: 1.2rem;
 }
 
 
