--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -15,7 +15,6 @@
 .card__content {
     display: flex;
     flex-direction: column;
-    /*align-items: center;*/
     width: 100%;
 }
 
@@ -27,11 +26,9 @@
     height: 240px;
 }
 
-/*.card__section {*/
-/*    display: flex;*/
-/*    justify-content: space-between;*/
-/*    align-items: flex-start;*/
-/*    margin-top: 40px;*/
-/*    margin-bottom: 40px;*/
-/*}*/
+.card__section {
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
