--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -12,6 +12,17 @@
     box-shadow: 0 4px 15px 4px hsla(0,0%,0%,0.25);
 }
 
+.card--large {
+    min-width: 1100px;
+    max-width: 1400px;
+    height: auto;
+    flex: 1 1 auto;
+}
+
+.card--small {
+    width: 600px;
+}
+
 .card__content {
     display: flex;
     flex-direction: column;
@@ -24,10 +35,12 @@
     right: 0;
     filter: saturate(40%) opacity(30%);
     height: 240px;
+    z-index: -1;
 }
 
 .card__section {
     display: flex;
+    align-items: flex-start;
     margin-top: 40px;
     margin-bottom: 40px;
 }
