--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -17,29 +17,38 @@
 
 .menu {
     position: relative;
-    margin: 40px 0 0 8vw;
+    margin: 40px 0 0 3rem;
+    width: 50%;
 }
 
 .menu__content {
     position: absolute;
+    width: 100%;
     top: 60px;
     opacity: 0;
     visibility: hidden;
     transform: translateY(-20px);
     transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;
     max-height: 200px;
-    overflow-y: auto;
 }
 
 .menu__content--active {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.menu__content--scroll {
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .menu__title, .menu__field {
     padding: 0;
-    width: 400px;
+    width: 100%;
     height: 3rem;
     border: none;
     background-color: var(--light-red-10);
@@ -61,20 +70,10 @@
 .menu__field--long {
     padding: 0 0 0 1rem;
     margin-bottom: 2px;
-    height: 3rem;
-    border: none;
-    background-color: var(--light-red-10);
     font-family: var(--ubuntu);
     text-align: left;
     font-size: 1rem;
     line-height: 1.2rem;
-    cursor: pointer;
-    width: 400px;
 }
 
-
-.menu__content--scroll {
-    max-height: 200px;
-    overflow-y: auto;
-}
 
