--- a/src/components/TitleBar/TitleBar.module.css
+++ b/src/components/TitleBar/TitleBar.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     padding-left: 10rem;
-    height: 70px;
+    min-height: 70px;
     margin-top: 40px;
     font-family: "Ubuntu", sans-serif;
     background-color: var(--light-yellow-80);
@@ -18,5 +18,4 @@
 }
 
 .title-bar__title {
-    padding: 0;
 }
