--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 40px 20px 0 20px;
+    margin: var(--single-margin) var(--half-margin) 0 20px;
 }
 
 .avatar__img {
