--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -35,11 +35,11 @@
     justify-content: flex-start;
     align-items: center;
     flex: 0 1 50%;
-    gap: 40px;
+    gap: var(--single-margin);
 }
 
 .header__avatar {
-    width: 60px;
+    width: var(--normal-icon);
     flex: 0 0 auto;
     filter: drop-shadow(0px 4px 10px hsla(0, 0%, 0%, 0.25));
 }
