--- a/src/components/ProgressBar/ProgressBar.module.css
+++ b/src/components/ProgressBar/ProgressBar.module.css
@@ -1,14 +1,14 @@
 .progress-bar {
     flex: 0.5 0 320px;
-    border-radius: 15px;
+    border-radius: var(--half-margin);
     box-shadow: 0 4px 10px 1px hsla(0, 0%, 0%, 0.25);
 }
 
 .progress {
-    height: 20px;
-    line-height: 20px;
+    height: var(--half-margin);
+    line-height: var(--half-margin);
     background-color: var(--accent-yellow-L70);
-    border-radius: 15px;
+    border-radius: var(--half-margin);
 }
 
 .percentage {
@@ -16,5 +16,5 @@
     font-weight: bold;
     text-align: end;
     color: var(--light-yellow-100);
-    margin: 0 5px 0 5px;
+    margin: 0 0.5rem 0 0.5rem;
 }
