--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -43,3 +43,7 @@
     flex: 0 0 auto;
     filter: drop-shadow(0px 4px 10px hsla(0, 0%, 0%, 0.25));
 }
+
+.header__slogan {
+    color: var(--dark-red-L25);
+}
