--- a/src/pages/Play/Play.module.css
+++ b/src/pages/Play/Play.module.css
@@ -18,6 +18,10 @@
     height: 2rem;
 }
 
+.card-list__task {
+    margin: 1rem 0;
+}
+
 .card-list__task:hover {
     font-weight: bold;
     cursor: pointer;
