--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,3 +1,9 @@
+.menu-box {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
 .menu-topic {
     margin: var(--single-margin) 0 0 10rem;
     text-shadow: 0 0.2rem 0.4rem hsla(0, 0%, 0%, 0.25);
