--- a/src/pages/Account/Account.module.css
+++ b/src/pages/Account/Account.module.css
@@ -7,6 +7,11 @@
     font-size: 1rem;
 }
 
+.account__form-label {
+    font-weight: normal;
+    color: var(--dark-grey);
+}
+
 .account__avatar-box {
     position: relative;
 }
@@ -17,7 +22,7 @@
     border-radius: 50%;
     border: none;
     padding: 4px 8px;
-    margin: 6px 0;
+    margin: 12px 0;
     background-color: var(--accent-yellow-L70);
     filter: opacity(80%);
     box-shadow: inset 0 2px 4px hsla(0, 0%, 0%, 0.25);
@@ -31,8 +36,10 @@
 
 .account__avatar-img:hover {
     cursor: pointer;
+    filter: contrast(110%);
 }
 
-h4 {
+.account__avatar-label {
     text-align: center;
+    font-weight: normal;
 }
