--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -49,11 +49,13 @@
 .header__avatar {
     width: var(--normal-icon);
     flex: 0 0 auto;
+    margin-bottom: 0.3rem;
     filter: drop-shadow(0px 4px 10px hsla(0, 0%, 0%, 0.25));
 }
 
 .header__name {
-    font-size: 0.6rem;
+    font-family: var(--ubuntu);
+    font-size: 0.7rem;
     font-weight: bold;
     color: var(--dark-grey);
 }
